apps/ingress-k8s-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-dashboard-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: "nginx"
  rules:
    - host: dashboard.localdev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubenetes-dashboard
                port:
                  name: https
    - host: dashboard.bobo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubenetes-dashboard
                port:
                  name: https
    - host: dashboard.ddbt.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubenetes-dashboard
                port:
                  name: https
  tls:
    - hosts:
        - dashboard.localdev.local
        - dashboard.bobo.local
        - dashboard.ddbt.duckdns.org
      secretName: k8s-dashboard-secret # do not change, this is provided by Argo CD
